<resources>
    <string name="app_name">EECC</string>



    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="text_login">Iniciar Sesión</string>
    <string name="text_password">Contraseña</string>
    <string name="text_username">Usuario</string>


    <string name="title_activity_projects">Proyectos</string>

    <string name="button_CID">Índ. Daño por Corrosión</string>
    <string name="button_SI">Índice Estructural</string>
    <string name="button_SDI">Índ. Daño Estructural</string>
    <string name="button_Report">Reporte</string>
    <string name="text_Evaluation">Evaluaciones</string>
    <string name="button_simplified">Evaluación Simplificada</string>
    <string name="button_manual">Evaluación Manual</string>
    <string name="radio_flexion">Flexión</string>
    <string name="radio_flexocompresion">Flexocompresión</string>
    <string name="title_activity_project_form">Nuevo Proyecto</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--        Structural Damage Index     -->
    <string name="SDI_ScreenTitle">Índice de Daño Estructural</string>
    <string name="slightFailureConsequence">Leve</string>
    <string name="importantFailureConsequence">Importante</string>

    <string name="corrosionIndexName">Índice de corrosión</string>
    <string name="structuralIndexName">Índice estructural</string>
    <string name="structuralDamageIndexName">IDE</string>
    <string name="interventionUrgency">Urgencia de intervención</string>


    <!--        Corrosion Index     -->
    <string name="CI_ScreenTitle">Índice de Corrosión</string>
    <string name="SI_ScreenTitle">Índice Estructural</string>
    <string name="Flexion_ScreenTitle">Flexión</string>
    <string name="Flexo_ScreenTitle">Flexocompresión</string>



    <string name="action_settings">Settings</string>

    <string name="button_next">Siguiente</string>
    <string name="button_evaluateIE">Evaluar IE</string>
    <string name="button_cancel">Cancelar</string>
    <string name="loginTitle">Instituto Tecnológico de Costa Rica \n Proyecto de Ingeniería de Software </string>
</resources>
