<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="25dp"
            android:id="@+id/radioType"
            android:checkedButton="@+id/radioFlexion">

            <RadioButton
                android:text="@string/radio_flexion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioFlexion"
                android:layout_alignParentStart="true"
                android:layout_marginStart="38dp"
                android:layout_alignTop="@+id/radioFlexocompresion"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/radio_flexocompresion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioFlexocompresion"
                android:layout_marginStart="41dp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/radioFlexion"
                android:layout_marginTop="40dp"
                android:layout_weight="1" />

        </RadioGroup>

        <Button
            android:text="@string/button_simplified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSimplified"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="@string/button_manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonManual"
            android:layout_below="@+id/buttonSimplified"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp" />
    </RelativeLayout>

</LinearLayout>