<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:text="Evaluación de Estructuras de Concreto por Corrosión"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:layout_height="220dp"
        android:textColor="@color/colorPrimaryDark" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/textViewUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:text="@string/text_username"
            android:layout_above="@+id/inputUsername"
            android:layout_alignStart="@+id/textViewPassword" />

        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_above="@+id/textViewPassword"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textEmailAddress" >
            <requestFocus/>
        </EditText>


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">


        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:text="@string/text_password"
            android:layout_above="@+id/inputPassword"
            android:layout_alignStart="@+id/inputPassword" />


        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_above="@+id/buttonLogin"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPassword" >
        </EditText>

    </LinearLayout>












    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/text_login"
        android:layout_marginBottom="134dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/inputPassword"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:layout_toEndOf="@+id/textViewPassword" />

</LinearLayout>